[tool.poetry]
name = "radarhd"
version = "0.1.0"
description = ""
authors = ["Akarsh Prabhakara <aprabhak@andrew.cmu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "~1.25"
scikit-learn = "^1.3.2"
SciPy = "^1.11.4"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
ipywidgets = "^8.1.1"
jupyter = "^1.0.0"
pytest = "^7.4.4"
imageio = {extras = ["ffmpeg"], version = "^2.33.1"}
open3d = "^0.18.0"
pandas = "^2.1.4"
opencv-python = ">4.7, <4.9.0.80"
pillow = "^9.0"

[tool.poetry.group.torch.dependencies]
torch = "^2.4.0"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"
torchsummary = "^1.5.1"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.1"
jupyter = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
bandit = "^1.7"
black = "~22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"